# zktls

./: Cargo.toml  LICENSE  README.md  TODO.md  benchmark.md
bins/benchmark/: Cargo.toml
bins/benchmark-r0/: Cargo.toml
bins/benchmark-r0/src/: main.rs
bins/benchmark-sp1/: Cargo.toml
bins/benchmark-sp1/src/: main.rs
bins/benchmark/src/: main.rs
bins/bundler/: Cargo.toml
bins/input-generator/: Cargo.toml
bins/input-generator/src/: main.rs
bins/t3zktlsd/: Cargo.toml
bins/t3zktlsd/assets/: config.toml
bins/t3zktlsd/examples/: generate_input.rs
bins/t3zktlsd/src/: config.rs  downloader.rs  main.rs
bins/t3zktlsd/src/commands/: init.rs  mod.rs  node.rs  register_prover.rs  register_verifier.rs
bins/zktls/: Cargo.toml
bins/zktls/src/: main.rs  utils.rs
bins/zktls/src/commands/: export_verifier.rs  mod.rs  prove.rs  types.rs
contracts/: .gitignore  Cargo.toml  build.rs  foundry.toml  hardhat.config.ts  package-lock.json  remappings.txt
contracts/script/: Deploy.s.sol
contracts/src/: IZkTLSGateway.sol  RequestHashLib.sol  ZkTLSGateway.sol  lib.rs
contracts/test/: Counter.t.sol
core/: Cargo.toml
core/src/: guest.rs  lib.rs  prelude.rs  prove_request.rs  tls.rs
core/src/template/: request.rs  response.rs
crates/cli-generator/: Cargo.toml
crates/cli-generator/src/: lib.rs  stdin.rs
crates/contracts/: Cargo.toml  build.rs
crates/contracts/src/: lib.rs
crates/generator/: Cargo.toml
crates/guest-prover/: Cargo.toml
crates/guest-prover-r0/: Cargo.toml
crates/guest-prover-r0/src/: lib.rs  prover.rs
crates/guest-prover-sp1/: Cargo.toml
crates/guest-prover-sp1/src/: sp1.rs
crates/guest-prover/src/: lib.rs  sp1.rs
crates/input-builder/: Cargo.toml
crates/input-builder/src/: config.rs  handler.rs  lib.rs  regex_cache.rs  request.rs
crates/input-builder/testdata/: req0.cbor  req0.json  req1.cbor
crates/kms/local/: Cargo.toml
crates/kms/local/src/: k256_decryptor.rs  k256_encryptor.rs  lib.rs
crates/listeners/: Cargo.toml
crates/listeners/src/: builder.rs  config.rs  lib.rs  listener.rs  prelude.rs
crates/prover/: Cargo.toml
crates/prover/src/: config.rs  lib.rs  prover.rs
crates/r0-guest-prover/: Cargo.toml
crates/r0-guest-prover/src/: prover.rs
crates/recordable-tls/: Cargo.toml
crates/recordable-tls/src/: lib.rs  provider.rs  random.rs  stream.rs  time.rs
crates/sp1-guest-prover/: Cargo.toml
crates/sp1-guest-prover/src/: lib.rs  sp1.rs
crates/sp1-guest-prover/testdata/: guest_input0.cbor
crates/submiter/: Cargo.toml
crates/submiter/src/: config.rs  lib.rs  remote.rs  submiter.rs
docs/: Architecture.md  ReqResp.md  req-resp.md
program/guest/: Cargo.toml  build.rs
program/guest/src/: lib.rs
program/guest/tls-r0/: Cargo.toml
program/guest/tls-sp1/: Cargo.toml
program/libs/replayable-tls/: Cargo.toml
program/libs/replayable-tls/src/: stream.rs
program/libs/tls/: Cargo.toml
program/libs/tls/src/: entry.rs  request.rs
program/libs/tls/testdata/: guest_input0.cbor  input.cbor
program/r0/: Cargo.toml
program/r0/src/: lib.rs
program/r0/tls-r0/: Cargo.toml
scripts/: deploy.dev.sh
scripts/env/: dev.sh
testdata/: input.json
