[workspace]
resolver = "2"
members = [
    "contracts",
    "core",

    "crates/recordable-tls",

    "crates/cli-generator",
    "crates/input-builder",
    "crates/guest-prover-sp1",
    # "crates/guest-prover-r0",
    "crates/submiter",

    "crates/prover",

    "bins/t3zktlsd",
]


exclude = ["program/sp1/tls-sp1", "program/risc0/tls-r0"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.91"
log = "0.4.22"
env_logger = "0.11.5"

alloy = "0.7"

once_cell = "1.19.0"

serde = { version = "1.0.214", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = "1.0.132"
# bytes = "1.7.2"
ciborium = "0.2.0"

async-trait = "0.1"

rand_core = "0.6.4"
rustls = { version = "0.23.13", default-features = false, features = ["std"] }
rustls-rustcrypto = { git = "https://github.com/the3cloud/rustls-rustcrypto.git" }
webpki-roots = "0.26.6"

t3zktls-program-core = { git = "https://github.com/the3cloud/zkvm-programs.git", branch = "main" }
t3zktls-core = { path = "core", version = "0.1.0" }
t3zktls-contracts-ethereum = { path = "contracts", version = "0.1.0" }
t3zktls-recordable-tls = { path = "crates/recordable-tls", version = "0.1.0" }

t3zktls-cli-generator = { path = "crates/cli-generator", version = "0.1.0" }
t3zktls-input-builder = { path = "crates/input-builder", version = "0.1.0" }
t3zktls-guest-prover-sp1 = { path = "crates/guest-prover-sp1", version = "0.1.0" }
t3zktls-prover = { path = "crates/prover", version = "0.1.0" }
t3zktls-submiter-ethereum = { path = "crates/submiter", version = "0.1.0" }

tokio = "1.41.0"

regex = "1.11.1"
lru = "0.12.5"

clap = { version = "4.5.20", features = ["derive"] }

toml = "0.8.19"
toml_edit = "0.22.22"

hex = "0.4.3"
reqwest = "0.12.1"
futures-util = "0.3.31"
