[workspace]
resolver = "2"
members = [
    "bins/zktls",
    "core",

    "crates/input-builder",
    "crates/guest-prover-sp1",
    "crates/guest-prover-r0",
]


exclude = ["program/sp1/tls-sp1", "program/risc0/tls-r0"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.91"
log = "0.4.22"
env_logger = "0.11.5"

alloy-primitives = "0.7"

serde = { version = "1.0.214", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = "1.0.132"
ciborium = "0.2.0"

rustls = { version = "0.23.13", default-features = false, features = ["std"] }
rustls-rustcrypto = { git = "https://github.com/the3cloud/rustls-rustcrypto.git" }
webpki-roots = "0.26.6"

zktls-program-core = { git = "https://github.com/the3cloud/zkvm-programs.git", branch = "main" }
zktls-recordable-tls-provider = { git = "https://github.com/the3cloud/zkvm-programs.git", branch = "main" }

zktls-core = { path = "core", version = "0.1.0" }
zktls-input-builder = { path = "crates/input-builder", version = "0.1.0" }
zktls-guest-prover-r0 = { path = "crates/guest-prover-r0", version = "0.1.0" }
zktls-guest-prover-sp1 = { path = "crates/guest-prover-sp1", version = "0.1.0" }

tokio = "1.41.0"

regex = "1.11.1"
lru = "0.12.5"
