[package]
name = "t3zktls-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
alloy = { workspace = true, features = ["serde", "sol-types"] }

log = { workspace = true }

anyhow = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }