[package]
name = "t3zktls-benchmark-sp1"
version.workspace = true
edition.workspace = true

[dependencies]
t3zktls-core.workspace = true
t3zktls-input-builder.workspace = true

env_logger.workspace = true

t3zktls-guest-prover-sp1 = { workspace = true }

tokio = { workspace = true }

hex = { workspace = true }

[features]
default = []
cuda = ["t3zktls-guest-prover-sp1/cuda"]
