[package]
name = "t3zktls-benchmark"
version.workspace = true
edition.workspace = true

[dependencies]
t3zktls-core.workspace = true
t3zktls-input-builder.workspace = true

env_logger.workspace = true
ciborium.workspace = true

# hex.workspace = true

sp1-sdk = { version = "3.0.0", optional = true }

risc0-zkvm = { version = "1.1.2", default-features = false, features = ["client", "prove"], optional = true }

t3zktls-program = { workspace = true }

[features]
# default = ["r0-backend"]
default = ["sp1-backend"]
sp1-backend = ["sp1-sdk", "t3zktls-program/sp1-backend"]
sp1-backend-cuda = ["sp1-sdk/cuda", "sp1-backend"]

r0-backend = ["risc0-zkvm", "t3zktls-program/r0-backend"]
r0-backend-cuda = ["risc0-zkvm/cuda", "r0-backend"]
