[package]
name = "t3zktlsd"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }

t3zktls-listeners-ethereum = { workspace = true }
t3zktls-input-builder = { workspace = true }
t3zktls-sp1-guest-prover = { workspace = true }
t3zktls-submiter-ethereum = { workspace = true }
t3zktls-prover = { workspace = true }
t3zktls-kms-local = { workspace = true }

alloy = { workspace = true, features = ["signers", "signer-local", "providers", "reqwest"]}
toml = "0.8.19"
