[package]
name = "t3zktlsd"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }

tokio = { workspace = true, features = ["fs"] }
serde = { workspace = true }

t3zktls-core = { workspace = true }
t3zktls-input-builder = { workspace = true }
t3zktls-guest-prover-sp1 = { workspace = true }
t3zktls-submiter-ethereum = { workspace = true }
t3zktls-prover = { workspace = true }
t3zktls-cli-generator = { workspace = true }

alloy = { workspace = true, features = [
    "signers",
    "signer-local",
    "providers",
    "reqwest",
    "getrandom",
] }
toml = { workspace = true }

env_logger = { workspace = true }
toml_edit = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }

log = { workspace = true }
