[package]
name = "zktls"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }

anyhow = "1.0"
log = { workspace = true }

tokio = { workspace = true }

zktls-program-core = { workspace = true }

serde_json = { workspace = true }

zktls-core = { workspace = true }

zktls-input-builder = { workspace = true }

zktls-guest-prover-r0 = { workspace = true }
zktls-guest-prover-sp1 = { workspace = true }

reqwest = "0.12.1"
futures-util = "0.3.31"

[features]
default = []
cuda = ["zktls-guest-prover-sp1/cuda", "zktls-guest-prover-r0/cuda"]
