[package]
name = "t3zktls-guest-prover-r0"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
risc0-zkvm = { version = "1.1.2", default-features = false, features = ["client", "prove"] }

t3zktls-core = { workspace = true }
zktls-program-core = { workspace = true }

tokio = { workspace = true }

ciborium = { workspace = true }

alloy-primitives = { workspace = true }

log = { workspace = true }

[features]
default = []
cuda = ["risc0-zkvm/cuda"]
