[package]
name = "t3zktls-guest-prover-sp1"
version.workspace = true
edition.workspace = true

[dependencies]
sp1-sdk = { version = "3.4.0" }

t3zktls-core = { workspace = true }
t3zktls-program-core = { workspace = true }

ciborium.workspace = true

anyhow = { workspace = true }

tokio = { workspace = true }

alloy = { workspace = true, features = ["sol-types"] }

log = { workspace = true }

hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = []
cuda = ["sp1-sdk/cuda"]
