[package]
name = "zktls-guest-prover-sp1"
version.workspace = true
edition.workspace = true

[dependencies]
sp1-sdk = { version = "=4.1.3" }

zktls-core = { workspace = true }
zktls-program-core = { workspace = true }

ciborium.workspace = true

anyhow = { workspace = true }

tokio = { workspace = true }

alloy-primitives = { workspace = true }

log = { workspace = true }


[features]
default = []
cuda = ["sp1-sdk/cuda"]
