[package]
name = "zktls-guest-prover-sp1"
version.workspace = true
edition.workspace = true

[dependencies]
sp1-sdk = { version = "4.1.4" }
sp1-prover = { version = "4.1.4" }

zktls-core = { workspace = true }
zktls-program-core = { workspace = true }

ciborium.workspace = true

anyhow = { workspace = true }

tokio = { workspace = true }

alloy-primitives = { workspace = true }

log = { workspace = true }


[features]
default = []
cuda = ["sp1-sdk/cuda"]
native-gnark = ["sp1-sdk/native-gnark"]
