[package]
name = "t3zktls-input-builder"
version.workspace = true
edition.workspace = true

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }

webpki-roots = { workspace = true }
rustls = { workspace = true }
rustls-rustcrypto = { workspace = true }

t3zktls-core = { workspace = true }
t3zktls-program-core = { workspace = true }
t3zktls-recordable-tls = { workspace = true }

lru = { workspace = true }
regex = { workspace = true }

tokio = { workspace = true, features = ["rt", "macros"] }

serde = { workspace = true }

# xrust = { workspace = true }
# jsonpath-rust = { workspace = true }
# serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
# hex = { workspace = true }
