[package]
name = "zktls-input-builder"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }

webpki-roots = { workspace = true }
rustls = { workspace = true }
rustls-rustcrypto = { workspace = true }

zktls-core = { workspace = true }
zktls-program-core = { workspace = true }
zktls-recordable-tls-provider = { workspace = true }

lru = { workspace = true }
regex = { workspace = true }

tokio = { workspace = true, features = ["rt", "macros"] }

serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
