[package]
name = "t3-zktls-listeners-ethereum"
version.workspace = true
edition.workspace = true

[dependencies]
alloy = { workspace = true, features = ["rpc", "rpc-types"] }
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true

t3-zktls-contracts-ethereum.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
alloy = { workspace = true, features = ["providers", "reqwest"] }