[package]
name = "t3zktls-program"
version = "0.1.0"
edition = "2021"

[dependencies]

[build-dependencies]
risc0-build = { version = "1.1.2", optional = true }
risc0-build-ethereum = { version = "1.1.2", optional = true }

sp1-helper = { version = "3.0.0", optional = true }

[package.metadata.risc0]
methods = ["tls-r0"]

[features]
default = []
sp1-backend = ["sp1-helper"]
r0-backend = ["risc0-build", "risc0-build-ethereum"]
